--- a/GameData/StockNoContracts/StockNoContracts.cfg
+++ b/GameData/StockNoContracts/StockNoContracts.cfg
@@ -6,14 +6,14 @@
 @Contracts:FINAL
 {
 
-    // Disable First Tutorial Contracts
-	@DisableWorldFirstTutorial = True
-    
-    // Disable First Progression Contracts
-	@DisableWorldFirstProgression = True
-    
-    // Disable First Records Contracts
-	@DisableWorldFirstRecords = True
+	@Progression
+	{
+	    // Disable First Tutorial Contracts
+		@DisableTutorialContracts = True
+		
+		// Disable First Progression Contracts
+		@DisableProgressionContracts = True
+	}
 	
 	// Disable Asteroid retrieval Contracts
     @ARM
